# OpenGLDemo

./: .clang-format  CMakeLists.txt  main.cpp
include/: Struct.h
src/: Struct.cpp
